--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!-- nav -->
 <div id="nav">
-  <a href="#"><img id="logo" src="img/myra-logo-long.png"></a>
+  <a href="http://myraclass.com/"><img id="logo" src="img/myra-logo-long.png"></a>
   <!-- how to podcast -->
   <div id="nav-buttons">
     <div class="btn-group">
@@ -52,7 +52,32 @@
     <img id="lady" src="img/full-body.png">
     <div id="submit">
       <h1>Welcome to MyRadio Class - or Myra for short.</h1>
-      <input type="text" name="your_name" size="35" value="">
+      <!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+    #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+    /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+       We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="//myraclass.us11.list-manage.com/subscribe/post?u=b19cb47b1ad3e07bd417f3dd2&amp;id=517f3a7998" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+   <div id="mc_embed_signup_scroll">
+    <h2>Sign Up for My Radio Class!</h2>
+<div class="mc-field-group">
+    <label for="mce-EMAIL">Email Address </label>
+    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+    <div id="mce-responses" class="clear">
+        <div class="response" id="mce-error-response" style="display:none"></div>
+        <div class="response" id="mce-success-response" style="display:none"></div>
+    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+   <div style="position: absolute; left: -5000px;"><input type="text" name="b_b19cb47b1ad3e07bd417f3dd2_517f3a7998" tabindex="-1" value=""></div>
+   <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+   </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
     </div>
   </div>
 	
