--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   <link rel="stylesheet" href="style.css"></link>
   <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Work+Sans:200' rel='stylesheet' type='text/css'>
 
   <!-- mailchimp signup form css styles -->
+  <!-- font:14px Helvetica,Arial,sans-serif; -->
   <style type="text/css">
-      #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+      #mc_embed_signup{background:#fff; clear:left; font: 14px; font-family: 'Delius', cursive;}
   </style>
 
 </head>
