--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- nav -->
 <div id="nav">
-  <a href="http://myraclass.com/"><img id="logo" src="img/myra-logo-long.png"></a>
+  <a href="http://myraclass.com/"><img id="logo" src="img/myra-logo-font.png"></a>
   <!-- how to podcast -->
   <div id="nav-buttons">
     <div class="btn-group">
