--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Work+Sans:200' rel='stylesheet' type='text/css'>
 
-  <!-- mailchimp signup form css styles -->
-  <!-- font:14px Helvetica,Arial,sans-serif; -->
-  <style type="text/css">
-      #mc_embed_signup{background:#fff; clear:left; font: 14px; font-family: 'Delius', cursive;}
-  </style>
-
 </head>
 <body>
 
@@ -31,7 +25,7 @@
         How to Podcast <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">1. Your First Listen</a></li>
+        <li><a href="1.html">1. Your First Listen</a></li>
         <li><a href="#">2. One Topic, Three Ways</a></li>
         <li><a href="#">3. Surprise!</a></li>
         <li><a href="#">4. For That Extra 15 Minutes</a></li>
