lots of css wheee

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <p id="intro">This is a 7 email newsletter series that introduces you to the world of podcasting. Your host, Myra Class, shares the best moments from a variety of podcasts and shows you how to access them. Sign up here.</p>
             <div class="mc-field-group">
                <!--  <label for="mce-EMAIL">Email Address </label> -->
-                <input type="email" value="Your Email Address" name="EMAIL" class="required email" id="mce-EMAIL">
+                <input type="email" value="Your Email" name="EMAIL" class="required email" id="mce-EMAIL">
             </div>
             <div id="mce-responses" class="clear">
                 <div class="response" id="mce-error-response" style="display:none"></div>
