--- a/find.html
+++ b/find.html
@@ -1,21 +1,23 @@
 <html>
 <head>
-	<title>MyRa Class</title>
+  <title>MyRa Class</title>
 
-	<!-- bootstrap -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css"></link>
   <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <link rel="stylesheet" href="style.css"></link>
+  <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Work+Sans:200' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="style.css"></link>
 
 <!-- nav -->
 <div id="nav">
-  <a href="http://myraclass.com/"><img id="logo" src="img/myra-logo-long.png"></a>
+  <a href="http://myraclass.com/"><img id="logo" src="img/myra-logo-font.png"></a>
   <!-- how to podcast -->
   <div id="nav-buttons">
     <div class="btn-group">
@@ -23,7 +25,7 @@
         How to Podcast <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">1. Your First Listen</a></li>
+        <li><a href="1.html">1. Your First Listen</a></li>
         <li><a href="#">2. One Topic, Three Ways</a></li>
         <li><a href="#">3. Surprise!</a></li>
         <li><a href="#">4. For That Extra 15 Minutes</a></li>
@@ -47,7 +49,12 @@
     </div>
   </div>
 </div>
-	
+
+<!-- div class="lesson">
+  <h1>Hello Dear!</h1>
+  <p class="lesson-copy">My friend Betty told me such a racy story the other day. Would you like to hear it?</p>
+  <iframe style="border:none" src="http://files.podsnack.com/iframe/embed.html?hash=av7kld7d&t=1442760628" width="460" height="60" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+</div> -->
 
 </body>
 </html>
