--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
     <!-- find your own (downloading podcast apps, and discover the most popular ones) -->
     <div class="btn-group">
-      <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">
+      <a href="find.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">
         Find Your Own
-      </button>
+      </button></a>
     </div>
 
     <div class="btn-group">
