--- a/1.html
+++ b/1.html
@@ -54,6 +54,8 @@
   <h1>Hello Dear!</h1>
   <p class="lesson-copy">My friend Betty told me such a racy story the other day. Would you like to hear it?</p>
   <iframe style="border:none" src="http://files.podsnack.com/iframe/embed.html?hash=av7kld7d&t=1442760628" width="460" height="60" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+  <p class="lesson-copy">Isn't that marvelous? Back in my day, she never would be put on the radio talking like that!</p>
 </div>
 
 </body>
