some small changes

--- a/find.html
+++ b/find.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>MyRa Class</title>
+  <title>My Radio Class</title>
 
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
