--- a/1.html
+++ b/1.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>MyRa Class</title>
+  <title>My Radio Class</title>
 
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -11,6 +11,13 @@
   <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Work+Sans:200' rel='stylesheet' type='text/css'>
+  <!-- audio.js -->
+    <script src="lib/audiojs/audio.min.js"></script>
+  <script>
+    audiojs.events.ready(function() {
+      var as = audiojs.createAll();
+    });
+  </script>
 
 </head>
 <body>
@@ -53,7 +60,8 @@
 <div class="lesson">
   <h1>Hello Dear!</h1>
   <p class="lesson-copy">My friend Betty told me such a racy story the other day. Would you like to hear it?</p>
-  <iframe style="border:none" src="http://files.podsnack.com/iframe/embed.html?hash=av7kld7d&t=1442760628" width="460" height="60" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+  <!-- <iframe style="border:none" src="http://files.podsnack.com/iframe/embed.html?hash=av7kld7d&t=1442760628" width="460" height="60" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> -->
+  <audio src="audio/1_1_jenkins.mp3" preload="auto" autoplay="autoplay"/>
 
   <p class="lesson-copy">Isn't that marvelous? Back in my day, she never would be put on the radio talking like that!</p>
 </div>
