--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     <!-- Begin MailChimp Signup Form -->
       <form action="//myraclass.us11.list-manage.com/subscribe/post?u=b19cb47b1ad3e07bd417f3dd2&amp;id=517f3a7998" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">
-            <h2>Welcome to My Radio Class!</h2>
-            <p id="intro">This is a 7 email newsletter series that introduces you to the world of podcasting. Your host, Myra Class, shares the best moments from a variety of podcasts and shows you how to access them.</p>
+            <h2>Welcome to My Radio Class.</h2>
+            <p id="intro">This is a seven-part series that introduces you to the world of podcasting. Your host, Myra Class, shares the best moments from a variety of podcasts and teaches you how to access them. Start your listening journey here.</p>
             <div class="mc-field-group">
                <!--  <label for="mce-EMAIL">Email Address </label> -->
-                <input type="email" value="Your Email: Signup" name="EMAIL" class="required email" id="mce-EMAIL">
+                <input type="email" value="Your Email" name="EMAIL" class="required email" id="mce-EMAIL">
             </div>
             <div id="mce-responses" class="clear">
                 <div class="response" id="mce-error-response" style="display:none"></div>
@@ -75,7 +75,7 @@
             </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
             <div style="position: absolute; left: -5000px;"><input type="text" name="b_b19cb47b1ad3e07bd417f3dd2_517f3a7998" tabindex="-1" value=""></div>
            <!--  <div class="clear"> -->
-            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded" class="button">
+            <button type="submit" name="subscribe" id="mc-embedded" class="signup">Sign up!</button>
             </div>
         </form>
     </div>
