adding css animation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <link rel="stylesheet" href="style.css"></link>
+  <link rel="stylesheet" href="/lib/animate.css"></link>
   <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Work+Sans:200' rel='stylesheet' type='text/css'>
@@ -59,7 +60,7 @@
 
   <div id="container" class="span11">
     <img id="lady" src="img/full-body.png">
-    <div id="submit">
+    <div id="submit" class="animated fadeInUp">
     <!-- Begin MailChimp Signup Form -->
       <form action="//myraclass.us11.list-manage.com/subscribe/post?u=b19cb47b1ad3e07bd417f3dd2&amp;id=517f3a7998" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">
