MYRAS GOT EYEBROWS

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="btn-group">
-      <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">
+      <a href="about.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false"></a>
         About
       </button>
     </div>
