--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <a href="http://myraclass.com/"><img id="logo" src="img/myra-logo-font.png"></a>
   <!-- how to podcast -->
   <div id="nav-buttons">
-    <div class="btn-group">
+    <!-- <div class="btn-group">
       <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         How to Podcast <span class="caret"></span>
       </button>
@@ -41,7 +41,7 @@
         <li><a href="#">6. Pick Your Flavor</a></li>
         <li><a href="#">7. Now what?</a></li>
       </ul>
-    </div>
+    </div> -->
 
     <!-- find your own (downloading podcast apps, and discover the most popular ones) -->
     <div class="btn-group">
