--- a/2.html
+++ b/2.html
@@ -1,3 +1,4 @@
+<!-- second lesson -->
 <!-- first lesson -->
 <html>
 <head>
@@ -5,6 +6,7 @@
 
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css"></link>
   <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <link rel="stylesheet" href="style.css"></link>
@@ -18,7 +20,6 @@
       var as = audiojs.createAll();
     });
   </script>
-  <link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
 
@@ -33,8 +34,8 @@
       </button>
       <ul class="dropdown-menu">
         <li><a href="1.html">1. Your First Listen</a></li>
-<!--         <li><a href="#">2. One Topic, Three Ways</a></li>
-        <li><a href="#">3. Surprise!</a></li>
+        <li><a href="2.html">2. One Topic, Three Ways</a></li>
+<!--         <li><a href="#">3. Surprise!</a></li>
         <li><a href="#">4. For That Extra 15 Minutes</a></li>
         <li><a href="#">5. Water Cooler Talk</a></li>
         <li><a href="#">6. Pick Your Flavor</a></li>
@@ -44,13 +45,13 @@
 
     <!-- find your own (downloading podcast apps, and discover the most popular ones) -->
     <div class="btn-group">
-      <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">
+      <a href="find.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">
         Find Your Own
-      </button>
+      </button></a>
     </div>
 
     <div class="btn-group">
-      <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">
+      <a href="about.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false"></a>
         About
       </button>
     </div>
