--- a/about.html
+++ b/about.html
@@ -50,11 +50,17 @@
   </div>
 </div>
 
-<!-- div class="lesson">
-  <h1>Hello Dear!</h1>
-  <p class="lesson-copy">My friend Betty told me such a racy story the other day. Would you like to hear it?</p>
-  <iframe style="border:none" src="http://files.podsnack.com/iframe/embed.html?hash=av7kld7d&t=1442760628" width="460" height="60" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-</div> -->
-
+<div class="lesson">
+<h2>About<h2>
+  <p id="intro">My Radio Class was created as part of the This American Life audio hackathon on September 19-20, 2015. While 46 million Americans listen to at least one podcast a month, there are still many people who do not. My Radio Class is an attempt to bridge this divide and encourage people new to podcasts to begin their listening journey.</p>
+    <h2>Contributors</h2>
+      <ul>
+        <li><a href="https://twitter.com/ashhwu">Ashley Wu</a></li>
+        <li><a href="https://twitter.com/whoacassidy">Cassidy CLawson</a></li>
+        <li><a href="https://twitter.com/eleanorkagan">Eleanor Kagan</a></li>
+        <li><a href="https://twitter.com/jihiitea">Jihii Jolly</a></li>
+        <li><a href="https://twitter.com/analogmichelle">Michelle Chandra</a></li>
+      </ul>
+</div>
 </body>
 </html>
