--- a/test.html
+++ b/test.html
@@ -9,6 +9,6 @@
   <title>Test</title>
 </head>
 <body>
-  <audio src="audio/1_1_jenkins.mp3" preload="auto" autoplay="autoplay"/>
+  <audio src="audio/1_1_jenkins.mp3"/>
 </body>
 </html>
