change 1 and 2 to one and two

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 
 <div class="lesson">
 <h2>About<h2>
-  <p id="intro">My Radio Class was created as part of the This American Life audio hackathon on September 19-20, 2015. While 46 million Americans listen to at least one podcast a month, there are still many people who do not. My Radio Class is an attempt to bridge this divide and encourage people new to podcasts to begin their listening journey.</p>
+  <p id="intro">My Radio Class was created as part of This American Life's Audio Hackathon on September 19-20, 2015. While 46 million Americans listen to at least one podcast a month, there are still many people who do not. My Radio Class bridges this divide and encourages people who want to explore podcasts but don't know where or how to start their listening journey.</p>
     <h2>Contributors</h2>
       <ul>
         <li><a href="https://twitter.com/ashhwu">Ashley Wu</a></li>
