--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
     </div>
 
     <div class="btn-group">
-      <a href="about.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false"></a>
-        About
-      </button>
+      <a href="about.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">About
+      </button></a>
     </div>
   </div>
 </div>
