--- a/two.html
+++ b/two.html
@@ -33,8 +33,8 @@
         How to Podcast <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="1.html">1. Your First Listen</a></li>
-        <li><a href="2.html">2. One Topic, Three Ways</a></li>
+        <li><a href="one.html">1. Your First Listen</a></li>
+        <li><a href="two.html">2. One Topic, Three Ways</a></li>
 <!--         <li><a href="#">3. Surprise!</a></li>
         <li><a href="#">4. For That Extra 15 Minutes</a></li>
         <li><a href="#">5. Water Cooler Talk</a></li>
@@ -51,9 +51,8 @@
     </div>
 
     <div class="btn-group">
-      <a href="about.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false"></a>
-        About
-      </button>
+      <a href="about.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">About
+      </button></a>
     </div>
   </div>
 </div>
