--- a/one.html
+++ b/one.html
@@ -32,7 +32,7 @@
         How to Podcast <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="1.html">1. Your First Listen</a></li>
+        <li><a href="one.html">1. Your First Listen</a></li>
 <!--         <li><a href="#">2. One Topic, Three Ways</a></li>
         <li><a href="#">3. Surprise!</a></li>
         <li><a href="#">4. For That Extra 15 Minutes</a></li>
@@ -43,16 +43,15 @@
     </div>
 
     <!-- find your own (downloading podcast apps, and discover the most popular ones) -->
-    <div class="btn-group">
-      <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">
+   <div class="btn-group">
+      <a href="find.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">
         Find Your Own
-      </button>
+      </button></a>
     </div>
 
     <div class="btn-group">
-      <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">
-        About
-      </button>
+      <a href="about.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">About
+      </button></a>
     </div>
   </div>
 </div>
@@ -61,9 +60,9 @@
   <h1>Hello Dear!</h1>
   <p class="lesson-copy">My friend Betty told me such a racy story the other day. Would you like to hear it?</p>
   <!-- <iframe style="border:none" src="http://files.podsnack.com/iframe/embed.html?hash=av7kld7d&t=1442760628" width="460" height="60" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> -->
-  <audio src="audio/1_1_jenkins.mp3" preload="auto" autoplay="autoplay"/>
-
+  <audio src="audio/1_1_jenkins.mp3"/></audio>
   <p class="lesson-copy">Isn't that marvelous? Back in my day, she never would be put on the radio talking like that!</p>
+
 </div>
 
 </body>
