placeholder text for find page

--- a/find.html
+++ b/find.html
@@ -50,11 +50,10 @@
   </div>
 </div>
 
-<!-- div class="lesson">
-  <h1>Hello Dear!</h1>
-  <p class="lesson-copy">My friend Betty told me such a racy story the other day. Would you like to hear it?</p>
-  <iframe style="border:none" src="http://files.podsnack.com/iframe/embed.html?hash=av7kld7d&t=1442760628" width="460" height="60" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-</div> -->
+<div class="lesson">
+<h2>Find Your Own<h2>
+  <p id="intro">Coming Soon! Information on how to download podcasts, where to find podcasts, and much much more!</p>
+</div>
 
 </body>
 </html>
