--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
       <form action="//myraclass.us11.list-manage.com/subscribe/post?u=b19cb47b1ad3e07bd417f3dd2&amp;id=517f3a7998" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">
             <h2>Welcome to My Radio Class.</h2>
-            <p id="intro">This is a seven-part series that introduces you to the world of podcasting. Your host, Myra Class, shares the best moments from a variety of podcasts and teaches you how to access them. Start your listening journey here.</p>
+            <p id="intro">
+              Have you been meaning to check out this "podcast" thing? This seven-part email series will introduce you to the audio-based medium everyone is talking about. I'm your host, Myra Class. Once a week, I'll send you great moments from a variety of podcasts and teach you how to listen on any device. Start your listening journey here.</p>
             <div class="mc-field-group">
                <!--  <label for="mce-EMAIL">Email Address </label> -->
                 <input type="email" value="Your Email" name="EMAIL" class="required email" id="mce-EMAIL">
