--- a/one.html
+++ b/one.html
@@ -56,13 +56,23 @@
   </div>
 </div>
 
-<div class="lesson">
-  <h1>Hello Dear!</h1>
-  <p class="lesson-copy">My friend Betty told me such a racy story the other day. Would you like to hear it?</p>
-  <!-- <iframe style="border:none" src="http://files.podsnack.com/iframe/embed.html?hash=av7kld7d&t=1442760628" width="460" height="60" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> -->
-  <audio src="audio/1_1_jenkins.mp3"/></audio>
-  <p class="lesson-copy">Isn't that marvelous? Back in my day, she never would be put on the radio talking like that!</p>
 
+<div id="container" class="span11">
+    <img id="lady-smaller" src="img/full-body.png">
+
+    <div class="lesson">
+      <h1>Hello Dear!</h1>
+      <p class="lesson-copy">My friend Betty told me such a racy story the other day. Would you like to hear it?</p>
+      <!-- <iframe style="border:none" src="http://files.podsnack.com/iframe/embed.html?hash=av7kld7d&t=1442760628" width="460" height="60" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> -->
+      <audio src="audio/1_1_jenkins.mp3"/></audio>
+      <p class="lesson-copy">Isn't that marvelous? Back in my day, she never would be put on the radio talking like that!</p>
+      <div class="explanation">
+        <p class="lesson-copy"><span class="subhead">What did I just hear?</span><br>Your first podcast! That was an entire episode of the show StoryCorps. StoryCorps travels the country to record interesting stories from people like you and me.</p>
+        <p class="lesson-copy"><span class="subhead">How can I hear more?</span><br>You can listen to more episodes of StoryCorps on their website.</p>
+        <p class="lesson-copy"><span class="subhead">I thought podcasts were longer.</span><br>Most are. But podcast come in all sizes, just like TV episodes. Many of the ones I'll show you range from 15 to 45 minutes. Stay tuned to the next email to hear examples of different types of podcasts.</p>
+        <p class="lesson-copy"><span class="subhead">Do I always have to be near a computer?</span><br>Nope! There are a bunch of apps for your smart phone that make listening to podcasts really fun and easy. More on that in the next email.</p>
+      </div>
+    </div>
 </div>
 
 </body>
