--- a/about.html
+++ b/about.html
@@ -4,14 +4,20 @@
 
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css"></link>
   <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <link rel="stylesheet" href="style.css"></link>
   <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Work+Sans:200' rel='stylesheet' type='text/css'>
-
+  <!-- audio.js -->
+  <script src="lib/audiojs/audio.min.js"></script>
+  <script>
+    audiojs.events.ready(function() {
+      var as = audiojs.createAll();
+    });
+  </script>
+  <link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
 
@@ -25,42 +31,29 @@
         How to Podcast <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="1.html">1. Your First Listen</a></li>
-        <li><a href="#">2. One Topic, Three Ways</a></li>
+        <li><a href="one.html">1. Your First Listen</a></li>
+<!--         <li><a href="#">2. One Topic, Three Ways</a></li>
         <li><a href="#">3. Surprise!</a></li>
         <li><a href="#">4. For That Extra 15 Minutes</a></li>
         <li><a href="#">5. Water Cooler Talk</a></li>
         <li><a href="#">6. Pick Your Flavor</a></li>
-        <li><a href="#">7. Now what?</a></li>
+        <li><a href="#">7. Now what?</a></li> -->
       </ul>
     </div>
 
     <!-- find your own (downloading podcast apps, and discover the most popular ones) -->
-    <div class="btn-group">
-      <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">
+   <div class="btn-group">
+      <a href="find.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">
         Find Your Own
-      </button>
+      </button></a>
     </div>
 
     <div class="btn-group">
-      <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">
-        About
-      </button>
+      <a href="about.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">About
+      </button></a>
     </div>
   </div>
 </div>
 
-<div class="lesson">
-<h2>About<h2>
-  <p id="intro">My Radio Class was created as part of This American Life's Audio Hackathon on September 19-20, 2015. While 46 million Americans listen to at least one podcast a month, there are still many people who do not. My Radio Class bridges this divide and encourages people who want to explore podcasts but don't know where or how to start their listening journey.</p>
-    <h2>Contributors</h2>
-      <ul>
-        <li class="li1"><a href="https://twitter.com/ashhwu">Ashley Wu</a></li>
-        <li class="li2"><a href="https://twitter.com/whoacassidy">Cassidy Clawson</a></li>
-        <li class="li3"><a href="https://twitter.com/eleanorkagan">Eleanor Kagan</a></li>
-        <li class="li4"><a href="https://twitter.com/jihiitea">Jihii Jolly</a></li>
-        <li class="li5"><a href="https://twitter.com/analogmichelle">Michelle Chandra</a></li>
-      </ul>
-</div>
 </body>
-</html>
+</html>s
