adding back about text

--- a/about.html
+++ b/about.html
@@ -55,5 +55,18 @@
   </div>
 </div>
 
+<div class="lesson">
+<h2>About<h2>
+  <p id="intro">My Radio Class was created as part of This American Life's Audio Hackathon on September 19-20, 2015. While 46 million Americans listen to at least one podcast a month, there are still many people who do not. My Radio Class bridges this divide and encourages people who want to explore podcasts but don't know where or how to start their listening journey.</p>
+    <h2>Contributors</h2>
+      <ul>
+        <li class="li1"><a href="https://twitter.com/ashhwu">Ashley Wu</a></li>
+        <li class="li2"><a href="https://twitter.com/whoacassidy">Cassidy Clawson</a></li>
+        <li class="li3"><a href="https://twitter.com/eleanorkagan">Eleanor Kagan</a></li>
+        <li class="li4"><a href="https://twitter.com/jihiitea">Jihii Jolly</a></li>
+        <li class="li5"><a href="https://twitter.com/analogmichelle">Michelle Chandra</a></li>
+      </ul>
+</div>
+
 </body>
 </html>s
