--- a/find.html
+++ b/find.html
@@ -55,5 +55,10 @@
   </div>
 </div>
 
+<div class="lesson">
+<h2>Find Your Own<h2>
+  <p id="intro">Coming Soon! Information on how to download podcasts, where to find podcasts, and much much more!</p>
+</div>
+
 </body>
 </html>
