one last change

--- a/about.html
+++ b/about.html
@@ -32,12 +32,12 @@
       </button>
       <ul class="dropdown-menu">
         <li><a href="one.html">1. Your First Listen</a></li>
-<!--         <li><a href="#">2. One Topic, Three Ways</a></li>
+        <li><a href="#">2. One Topic, Three Ways</a></li>
         <li><a href="#">3. Surprise!</a></li>
         <li><a href="#">4. For That Extra 15 Minutes</a></li>
         <li><a href="#">5. Water Cooler Talk</a></li>
         <li><a href="#">6. Pick Your Flavor</a></li>
-        <li><a href="#">7. Now what?</a></li> -->
+        <li><a href="#">7. Now what?</a></li>
       </ul>
     </div>
 
