--- a/find.html
+++ b/find.html
@@ -43,14 +43,18 @@
 
     <!-- find your own (downloading podcast apps, and discover the most popular ones) -->
    <div class="btn-group">
-      <a href="find.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">
-        Find Your Own
-      </button></a>
+      <a href="find.html">
+        <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">
+          Find Your Own
+        </button>
+      </a>
     </div>
 
     <div class="btn-group">
-      <a href="about.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">About
-      </button></a>
+      <a href="about.html">
+        <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">About
+        </button>
+      </a>
     </div>
   </div>
 </div>
