--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
   <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Work+Sans:200' rel='stylesheet' type='text/css'>
+  <!-- Social Media Icon customization -->
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+  <link href="social-sharing.css" rel="stylesheet">
   <!-- audio.js -->
   <script src="lib/audiojs/audio.min.js"></script>
   <script>
@@ -17,7 +20,6 @@
       var as = audiojs.createAll();
     });
   </script>
-  <link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
 
@@ -67,6 +69,22 @@
         <li class="li5"><a href="https://twitter.com/analogmichelle">Michelle Chandra</a></li>
       </ul>
 </div>
+
+<!-- Footer Content --> 
+    <div id="footer">
+      <p>&copy; My Radio Class</p>
+      <div id="socialbuttons">        
+
+        <!-- Twitter -->
+        <a href="http://twitter.com/home?status=Check out My Radio Class to learn how to podcast - http://myraclass.com/" title="Share on Twitter" target="_blank" class="btn btn-twitter"><i class="fa fa-twitter"></i></a>
+
+         <!-- Facebook -->
+        <a href="https://www.facebook.com/sharer/sharer.php?u=&p[title]=How to Podcast&p[url]=http://myraclass.com/&p[summary]=Sign up for this awesome email newsletter and learn about all things podcasat&p[images][0]http://myraclass.com/img/myra-logo-font.png" title="Share on Facebook" target="_blank" class="btn btn-facebook"><i class="fa fa-facebook"></i></a>
+
+        <!-- LinkedIn --> 
+        <a href="      http://www.linkedin.com/shareArticle?mini=true&url=http://myraclass.com/&title=How%20to%20podcast&summary=Sign%20up%20for%20this%20email%20newsletter%20to%20learn%20about%20all%20things%20%20podcasts&source=myraclass.com" title="Share on LinkedIn" target="_blank" class="btn btn-linkedin"><i class="fa fa-linkedin"></i></a>
+      <div>
+    </div>
 
 </body>
 </html>
