--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Work+Sans:200' rel='stylesheet' type='text/css'>
+
+  <!-- Social Media Icon customization -->
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+  <link href="social-sharing.css" rel="stylesheet">
   <!-- audio.js -->
     <script src="lib/audiojs/audio.min.js"></script>
   <script>
@@ -23,67 +27,86 @@
 </head>
 <body>
 
-<!-- nav -->
-<div id="nav">
-  <a href="http://myraclass.com/"><img id="logo" src="img/myra-logo-font.png"></a>
-  <!-- how to podcast -->
-  <div id="nav-buttons">
-    <!-- <div class="btn-group">
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        How to Podcast <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a href="1.html">1. Your First Listen</a></li>
-        <li><a href="#">2. One Topic, Three Ways</a></li>
-        <li><a href="#">3. Surprise!</a></li>
-        <li><a href="#">4. For That Extra 15 Minutes</a></li>
-        <li><a href="#">5. Water Cooler Talk</a></li>
-        <li><a href="#">6. Pick Your Flavor</a></li>
-        <li><a href="#">7. Now what?</a></li>
-      </ul>
-    </div> -->
+<!-- Beginning of navigation bar -->
+    <div id="nav">
+      <a href="http://myraclass.com/"><img id="logo" src="img/myra-logo-font.png"></a>
+      <!-- how to podcast -->
+      <div id="nav-buttons">
+        <!-- <div class="btn-group">
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            How to Podcast <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="1.html">1. Your First Listen</a></li>
+            <li><a href="#">2. One Topic, Three Ways</a></li>
+            <li><a href="#">3. Surprise!</a></li>
+            <li><a href="#">4. For That Extra 15 Minutes</a></li>
+            <li><a href="#">5. Water Cooler Talk</a></li>
+            <li><a href="#">6. Pick Your Flavor</a></li>
+            <li><a href="#">7. Now what?</a></li>
+          </ul>
+        </div> -->
 
-    <!-- find your own (downloading podcast apps, and discover the most popular ones) -->
-    <div class="btn-group">
-      <a href="find.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">
-        Find Your Own
-      </button></a>
-    </div>
+            <!-- find your own (downloading podcast apps, and discover the most popular ones) -->
+            <div class="btn-group">
+              <a href="find.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">
+                Find Your Own
+              </button></a>
+            </div>
 
-    <div class="btn-group">
-      <a href="about.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">About
-      </button></a>
+            <div class="btn-group">
+              <a href="about.html"><button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false">About
+              </button></a>
+            </div>
+      </div>
     </div>
-  </div>
+<!-- End of navigation bar -->
+
+<!-- Main Body Content --> 
+    <div id="container" class="span11">
+      <img id="lady" src="img/full-body.png">
+
+      <!-- Begin MailChimp Signup Form -->    
+      <div id="submit" class="animated fadeInUp">
+        <form action="//myraclass.us11.list-manage.com/subscribe/post?u=b19cb47b1ad3e07bd417f3dd2&amp;id=517f3a7998" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+              <h2>Welcome to My Radio Class.</h2>
+              <p id="intro">
+                Have you been meaning to check out this "podcast" thing? This seven-part email series will introduce you to the audio-based medium everyone is talking about. I'm your host, Myra Class. Once a week, I'll send you great moments from a variety of podcasts and teach you how to listen on any device. Start your listening journey here.</p>
+              <div class="mc-field-group">
+                 <!--  <label for="mce-EMAIL">Email Address </label> -->
+                  <input type="email" value="Your Email" name="EMAIL" class="required email" id="mce-EMAIL">
+              </div>
+              <div id="mce-responses" class="clear">
+                  <div class="response" id="mce-error-response" style="display:none"></div>
+                  <div class="response" id="mce-success-response" style="display:none"></div>
+              </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;"><input type="text" name="b_b19cb47b1ad3e07bd417f3dd2_517f3a7998" tabindex="-1" value=""></div>
+             <!--  <div class="clear"> -->
+              <button type="submit" name="subscribe" id="mc-embedded" class="signup">Sign up!</button>
+              </div>
+          </form>
+      </div>
+  <!--End mc_embed_signup-->
+    
+
+<!-- Footer Content --> 
+    <div id="footer">
+      <p>&copy; My Radio Class</p>
+      <div id="socialbuttons">        
+
+        <!-- Twitter -->
+        <a href="http://twitter.com/home?status=Check out My Radio Class to learn how to podcast - http://myraclass.com/" title="Share on Twitter" target="_blank" class="btn btn-twitter"><i class="fa fa-twitter"></i></a>
+
+         <!-- Facebook -->
+        <a href="https://www.facebook.com/sharer/sharer.php?u=&p[title]=How to Podcast&p[url]=http://myraclass.com/&p[summary]=Sign up for this awesome email newsletter and learn about all things podcasat&p[images][0]http://myraclass.com/img/myra-logo-font.png" title="Share on Facebook" target="_blank" class="btn btn-facebook"><i class="fa fa-facebook"></i></a>
+
+        <!-- LinkedIn --> 
+        <a href="      http://www.linkedin.com/shareArticle?mini=true&url=http://myraclass.com/&title=How%20to%20podcast&summary=Sign%20up%20for%20this%20email%20newsletter%20to%20learn%20about%20all%20things%20%20podcasts&source=myraclass.com" title="Share on LinkedIn" target="_blank" class="btn btn-linkedin"><i class="fa fa-linkedin"></i></a>
+      <div>
+    </div>
 </div>
 
-  <div id="container" class="span11">
-    <img id="lady" src="img/full-body.png">
-    <div id="submit" class="animated fadeInUp">
-    <!-- Begin MailChimp Signup Form -->
-      <form action="//myraclass.us11.list-manage.com/subscribe/post?u=b19cb47b1ad3e07bd417f3dd2&amp;id=517f3a7998" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div id="mc_embed_signup_scroll">
-            <h2>Welcome to My Radio Class.</h2>
-            <p id="intro">
-              Have you been meaning to check out this "podcast" thing? This seven-part email series will introduce you to the audio-based medium everyone is talking about. I'm your host, Myra Class. Once a week, I'll send you great moments from a variety of podcasts and teach you how to listen on any device. Start your listening journey here.</p>
-            <div class="mc-field-group">
-               <!--  <label for="mce-EMAIL">Email Address </label> -->
-                <input type="email" value="Your Email" name="EMAIL" class="required email" id="mce-EMAIL">
-            </div>
-            <div id="mce-responses" class="clear">
-                <div class="response" id="mce-error-response" style="display:none"></div>
-                <div class="response" id="mce-success-response" style="display:none"></div>
-            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;"><input type="text" name="b_b19cb47b1ad3e07bd417f3dd2_517f3a7998" tabindex="-1" value=""></div>
-           <!--  <div class="clear"> -->
-            <button type="submit" name="subscribe" id="mc-embedded" class="signup">Sign up!</button>
-            </div>
-        </form>
-    </div>
-
-<!--End mc_embed_signup-->
-    </div>
-  </div>
 	
 
 </body>
