updating about page style

--- a/about.html
+++ b/about.html
@@ -57,18 +57,36 @@
   </div>
 </div>
 
-<div class="lesson">
-<h2>About<h2>
+<div id="container" class="span11">
+<h2 id="abouttitle">About<h2>
   <p id="intro">My Radio Class was created as part of This American Life's Audio Hackathon on September 19-20, 2015. While 46 million Americans listen to at least one podcast a month, there are still many people who do not. My Radio Class bridges this divide and encourages people who want to explore podcasts but don't know where or how to start their listening journey.</p>
-    <h2>Contributors</h2>
-      <ul>
-        <li class="li1"><a href="https://twitter.com/ashhwu">Ashley Wu</a></li>
-        <li class="li2"><a href="https://twitter.com/whoacassidy">Cassidy Clawson</a></li>
-        <li class="li3"><a href="https://twitter.com/eleanorkagan">Eleanor Kagan</a></li>
-        <li class="li4"><a href="https://twitter.com/jihiitea">Jihii Jolly</a></li>
-        <li class="li5"><a href="https://twitter.com/analogmichelle">Michelle Chandra</a></li>
-      </ul>
-</div>
+    <h2 id="aboutsubtitle">Contributors</h2>
+    <div id="contributors">
+    <div class="col-md-4">
+      <img class="contributorimg" src="img/ashleywu.jpg">
+      <a class="contributorlink" href="https://twitter.com/ashhwu">Ashley Wu</a>
+    </div>
+
+    <div class="col-md-4">
+      <img class="contributorimg" src="img/cassidyclawson.jpg">
+      <a class="contributorlink" href="https://twitter.com/whoacassidy">Cassidy Clawson</a>
+    </div>
+
+    <div class="col-md-4">
+      <img class="contributorimg" src="img/eleanorkagan.jpg">
+      <a class="contributorlink" href="https://twitter.com/eleanorkagan">Eleanor Kagan</a>
+    </div>
+
+    <div class="col-md-4">
+      <img class="contributorimg" src="img/jihiijolly.jpg">
+      <a class="contributorlink" href="https://twitter.com/jihiitea">Jihii Jolly</a>
+    </div>
+
+    <div class="col-md-4">
+      <img class="contributorimg" src="img/michellechandra.jpg">
+      <a class="contributorlink" href="https://twitter.com/analogmichelle">Michelle Chandra</a>
+    </div>
+  </div>
 
 <!-- Footer Content --> 
     <div id="footer">
@@ -85,6 +103,7 @@
         <a href="      http://www.linkedin.com/shareArticle?mini=true&url=http://myraclass.com/&title=How%20to%20podcast&summary=Sign%20up%20for%20this%20email%20newsletter%20to%20learn%20about%20all%20things%20%20podcasts&source=myraclass.com" title="Share on LinkedIn" target="_blank" class="btn btn-linkedin"><i class="fa fa-linkedin"></i></a>
       <div>
     </div>
+</div>
 
 </body>
 </html>
