--- a/about.html
+++ b/about.html
@@ -58,31 +58,38 @@
 </div>
 
 <div id="container" class="span11">
-<h2 id="abouttitle">About<h2>
-  <p id="intro">My Radio Class was created as part of This American Life's Audio Hackathon on September 19-20, 2015. While 46 million Americans listen to at least one podcast a month, there are still many people who do not. My Radio Class bridges this divide and encourages people who want to explore podcasts but don't know where or how to start their listening journey.</p>
+  <div id="about">
+
+  <div class="col-md-4 banner">
+      <h2 id="abouttitle">About<h2>
+      <p id="aboutintro">My Radio Class was created as part of This American Life's Audio Hackathon on September 19-20, 2015. While 46 million Americans listen to at least one podcast a month, there are still many people who do not. My Radio Class bridges this divide and encourages people who want to explore podcasts but don't know where or how to start their listening journey.</p>
+  </div>
+
+ </div>
+
     <h2 id="aboutsubtitle">Contributors</h2>
     <div id="contributors">
-    <div class="col-md-4">
+    <div class="col-md-4 contributor">
       <img class="contributorimg" src="img/ashleywu.jpg">
       <a class="contributorlink" href="https://twitter.com/ashhwu">Ashley Wu</a>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4 contributor">
       <img class="contributorimg" src="img/cassidyclawson.jpg">
       <a class="contributorlink" href="https://twitter.com/whoacassidy">Cassidy Clawson</a>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4 contributor">
       <img class="contributorimg" src="img/eleanorkagan.jpg">
       <a class="contributorlink" href="https://twitter.com/eleanorkagan">Eleanor Kagan</a>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4 contributor">
       <img class="contributorimg" src="img/jihiijolly.jpg">
       <a class="contributorlink" href="https://twitter.com/jihiitea">Jihii Jolly</a>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4 contributor">
       <img class="contributorimg" src="img/michellechandra.jpg">
       <a class="contributorlink" href="https://twitter.com/analogmichelle">Michelle Chandra</a>
     </div>
