updating find yoru own page

--- a/find.html
+++ b/find.html
@@ -61,10 +61,15 @@
   </div>
 </div>
 
-<div class="lesson">
-<h2>Find Your Own<h2>
-  <p id="intro">Coming Soon! Information on how to download podcasts, where to find podcasts, and much much more!</p>
-</div>
+<div id="container" class="span11">
+ <div id="find">
+
+  <div class="col-md-4">
+      <h2 id="findtitle">Find Your Own<h2>
+      <p id="findintro">Coming Soon! Information on how to download podcasts, where to find podcasts, and much much more!</p>
+  </div>
+
+ </div>
 
 <!-- Footer Content --> 
     <div id="footer">
