adding scroll animations

--- a/find.html
+++ b/find.html
@@ -10,6 +10,11 @@
   <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Work+Sans:200' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="/lib/animate.css"></link>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  <script>
+  new WOW().init();
+  </script
   <!-- Social Media Icon customization -->
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
   <link href="social-sharing.css" rel="stylesheet">
@@ -64,9 +69,9 @@
 <div id="container" class="span11">
  <div id="find">
 
-  <div class="col-md-4">
-      <h2 id="findtitle">Find Your Own<h2>
-      <p id="findintro">Coming Soon! Information on how to download podcasts, where to find podcasts, and much much more!</p>
+  <div class="col-md-4 animated fadeInLeft">
+      <h2 id="findtitle" class="fadeInLeft">Find Your Own<h2>
+      <p id="findintro" class="fadeInLeft">Coming Soon! Information on how to download podcasts, where to find podcasts, and much much more!</p>
   </div>
 
  </div>
