--- a/about.html
+++ b/about.html
@@ -10,6 +10,11 @@
   <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Work+Sans:200' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="/lib/animate.css"></link>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  <script>
+  new WOW().init();
+  </script>
   <!-- Social Media Icon customization -->
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
   <link href="social-sharing.css" rel="stylesheet">
@@ -60,38 +65,38 @@
 <div id="container" class="span11">
   <div id="about">
 
-  <div class="col-md-4 banner">
-      <h2 id="abouttitle">About<h2>
-      <p id="aboutintro">My Radio Class was created as part of This American Life's Audio Hackathon on September 19-20, 2015. While 46 million Americans listen to at least one podcast a month, there are still many people who do not. My Radio Class bridges this divide and encourages people who want to explore podcasts but don't know where or how to start their listening journey.</p>
+  <div class="col-md-4 banner animated fadeInLeft">
+      <h2 id="abouttitle" class="animated fadeInLeft">About<h2>
+      <p id="aboutintro" class="animated fadeInLeft">My Radio Class was created as part of This American Life's Audio Hackathon on September 19-20, 2015. While 46 million Americans listen to at least one podcast a month, there are still many people who do not. My Radio Class bridges this divide and encourages people who want to explore podcasts but don't know where or how to start their listening journey.</p>
   </div>
 
  </div>
 
-    <h2 id="aboutsubtitle">Contributors</h2>
+    <h2 id="aboutsubtitle" class="wow fadeInLeft">Contributors</h2>
     <div id="contributors">
     <div class="col-md-4 contributor">
-      <img class="contributorimg" src="img/ashleywu.jpg">
-      <a class="contributorlink" href="https://twitter.com/ashhwu">Ashley Wu</a>
+      <img class="contributorimg wow fadeInUp" src="img/ashleywu.jpg">
+      <a class="contributorlink wow fadeInUp" href="https://twitter.com/ashhwu">Ashley Wu</a>
     </div>
 
     <div class="col-md-4 contributor">
-      <img class="contributorimg" src="img/cassidyclawson.jpg">
-      <a class="contributorlink" href="https://twitter.com/whoacassidy">Cassidy Clawson</a>
+      <img class="contributorimg wow fadeInUp" src="img/cassidyclawson.jpg">
+      <a class="contributorlink wow fadeInUp" href="https://twitter.com/whoacassidy">Cassidy Clawson</a>
     </div>
 
     <div class="col-md-4 contributor">
-      <img class="contributorimg" src="img/eleanorkagan.jpg">
-      <a class="contributorlink" href="https://twitter.com/eleanorkagan">Eleanor Kagan</a>
+      <img class="contributorimg wow fadeInUp" src="img/eleanorkagan.jpg">
+      <a class="contributorlink wow fadeInUp" href="https://twitter.com/eleanorkagan">Eleanor Kagan</a>
     </div>
 
     <div class="col-md-4 contributor">
-      <img class="contributorimg" src="img/jihiijolly.jpg">
-      <a class="contributorlink" href="https://twitter.com/jihiitea">Jihii Jolly</a>
+      <img class="contributorimg wow fadeInUp" src="img/jihiijolly.jpg">
+      <a class="contributorlink wow fadeInUp" href="https://twitter.com/jihiitea">Jihii Jolly</a>
     </div>
 
     <div class="col-md-4 contributor">
-      <img class="contributorimg" src="img/michellechandra.jpg">
-      <a class="contributorlink" href="https://twitter.com/analogmichelle">Michelle Chandra</a>
+      <img class="contributorimg wow fadeInUp" src="img/michellechandra.jpg">
+      <a class="contributorlink wow fadeInUp" href="https://twitter.com/analogmichelle">Michelle Chandra</a>
     </div>
   </div>
 
